# Pico-Dashboard

./: .gitignore  .gitmodules  README.md
3.Firmware/: .clangd  CMakeLists.txt  Makefile
3.Firmware/Inc/: lv_conf.h  main.h  waveshare_rp2040_lcd_1.28.h
3.Firmware/LCD/: display_interface.c  display_interface.h  gc9a01a.c  gc9a01a.h
3.Firmware/LFS/: filesystem.c  filesystem.h
3.Firmware/Protocol/: ascii_processor.c  ascii_processor.h  protocol.c  protocol.h
3.Firmware/USB/: msc_disk.c  usb_descriptors.c  usbcdc.c  usbcdc.h
3.Firmware/UserApp/: main.c  main_page.c  main_page.h
4.Model/: case.SLDPRT
